# CommonGround

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  README_CN.md  config.docker.toml  config.toml.sample  docker-compose.yml  nats.conf  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+3 more)
core/: app_config.py  cg_context.py  config.py  config_defaults.py  config_loader.py  delegation_policy.py  deliverable_fallback.py  errors.py  events.py  fields_schema.py  headers.py  json_schema.py  llm.py  message_source.py  payload_control.py  pyproject.toml  resource_models.py  state.py  status.py  subject.py  time_utils.py  trace.py  utils.py  utp_protocol.py
infra/: agent_dispatcher.py  agent_routing.py  artifacts.py  cardbox_client.py  e2b_executor.py  event_emitter.py  gcs_client.py  idempotency.py  l0_engine.py  llm_gateway.py  mock_llm_handler.py  nats_client.py  project_bootstrap.py  sandbox_registry.py  service_context.py  service_runtime.py  skills.py  srt_executor.py
scripts/: README.md  __init__.py  review_indent_changes.py
tests/: conftest.py  default_llm.yaml  test_agent_routing.py  test_bench_fork_join_batch.py  test_cardbox_get_cards_order.py  test_cg_context_helpers.py  test_config_loader.py  test_context_engine_reasoning_content.py  test_delegation_policy.py  test_event_emitter.py  test_execution_store_claim_isolation.py  test_llm_gateway_tool_choice.py  test_scripts_utils_agent.py  test_tool_result_override.py  test_turn_lease.py  test_utp_protocol_missing_fields.py
(+325 files in other folders)
