[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CommonGround"
version = "0.1.0"
description = "Protocol-first multi-agent operating system kernel for sociotechnical coordination, combining Postgres as truth source with NATS wakeup semantics."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
    "jsonschema>=4.25.1",
    "nats-py==2.12.0",
    "aiosqlite>=0.21.0",
    "toml>=0.10.2",
    "psycopg[binary,pool]>=3.1",
    "duckdb>=0.10",
    "pydantic-settings>=2.2",
    "httpx>=0.28.1",
    "boto3>=1.41.1",
    "litellm>=1.80.9,<2",
    "openai>=2.8,<3",
    "tenacity>=8.2.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "instructor>=1.13.0",
    "google-genai>=1.53.0",
    "google-cloud-storage>=2.16.0",
    "e2b-code-interpreter>=0.1.0",
    "uuid6>=2025.0.1",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.20",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "card-box-core",
]

[tool.setuptools.packages.find]
include = ["core*", "infra*"]

[tool.uv.sources]
card-box-core = { path = "./card-box-cg", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
